--- a/composer.json
+++ b/composer.json
@@ -9,6 +9,12 @@
         "codeclimate/php-test-reporter": "dev-master"
     },
     "license": "MIT license",
+    "autoload": {
+        "psr-0": {
+            "iDimensionz\\SendGridWebApiV3\\": "lib/",
+            "Tests\\iDimensionz\\SendGridWebApiV3\\": "tests/"
+        }
+    },
     "authors": [
         {
             "name": "Jim Mullen",
