--- a/composer.json
+++ b/composer.json
@@ -6,7 +6,8 @@
     },
     "require-dev": {
         "phpunit/phpunit": "4.6.*",
-        "codeclimate/php-test-reporter": "dev-master"
+        "codeclimate/php-test-reporter": "dev-master",
+        "phake/phake": "2.1.x-dev"
     },
     "license": "MIT license",
     "autoload": {
