--- a/.travis.yml
+++ b/.travis.yml
@@ -41,7 +41,7 @@ php:
 #  - if [[ "$DB" == "mysql" ]]; then mysql -e "create database IF NOT EXISTS hello_world_test;" -uroot; fi
 
 install:
-  - composer install
+  - composer install --no-interaction
 # omitting "script:" will default to phpunit
 # use the $DB env variable to determine the phpunit.xml to use
 #script: phpunit --configuration phpunit_$DB.xml --coverage-text
