--- a/composer.json
+++ b/composer.json
@@ -2,14 +2,14 @@
     "name": "idimensionz/sendgrid-webapi-v3",
     "description": "PHP implementation of the SendGrid WebAPI v3",
     "require": {
-        "guzzlehttp/guzzle": "6.5.6"
+        "guzzlehttp/guzzle": "6.5.*"
     },
     "require-dev": {
         "phpunit/phpunit": "4.6.*",
         "codeclimate/php-test-reporter": "dev-master",
         "phake/phake": "2.1.x-dev"
     },
-    "license": "MIT license",
+    "license": "MIT",
     "autoload": {
         "psr-4": {
             "iDimensionz\\Api\\": "lib/iDimensionz/Api/",
